...
"adyen.paymentMethods.title" = "Payment Methods";
"adyen.paymentMethod.removeButton" = "Yes, remove";
"adyen.payment.refused.message" = "The payment was refused. Please try again.";
"adyen.sepa.ibanItem.title" = "Account Number (IBAN)";
"adyen.sepa.ibanItem.invalid" = "Invalid account number";
"adyen.sepa.nameItem.title" = "Holder Name";
"adyen.sepa.nameItem.placeholder" = "J. Smith";
"adyen.sepa.consentLabel" = "By pressing the button above, you agree that the specified amount will be debited from your bank account.";
"adyen.sepa.nameItem.invalid" = "Holder name invalid";
"adyen.card.storeDetailsButton" = "Remember for next time";
"adyen.card.nameItem.title" = "Name on card";
"adyen.card.nameItem.placeholder" = "J. Smith";
"adyen.card.nameItem.invalid" = "Enter name as shown on card";
"adyen.card.numberItem.title" = "Card number";
"adyen.card.numberItem.placeholder" = "1234 5678 9012 3456";
"adyen.card.numberItem.invalid" = "Invalid card number";
"adyen.card.expiryItem.title" = "Expiry date";
"adyen.card.expiryItem.title.optional" = "Expiry date (optional)";
"adyen.card.expiryItem.placeholder" = "MM/YY";
"adyen.card.expiryItem.invalid" = "Invalid expiry date";
"adyen.card.expiryItem.accessibilityLabel" = "Month, 2 digits, Year, 2 digits";
"adyen.card.cvcItem.invalid" = "Invalid CVC / CVV format";
"adyen.card.cvcItem.title" = "Security code";
"adyen.card.cvcItem.placeholder" = "123";
"adyen.card.securityCode.title" = "Enter security code";
...
"adyen.card.numberItem.unsupportedBrand" = "%@ isn't supported";
"adyen.card.numberItem.unknownBrand" = "The entered card brand isn't supported";
"adyen.card.scanYourCardButton" = "Scan your card";
"adyen.creditCard.dualBrand.title" = "Card Brand";
"adyen.creditCard.dualBrand.description" = "Select the card brand you prefer to pay with. This is optional.";
"adyen.dropIn.stored.title" = "Confirm %@ payment";
"adyen.dropIn.preselected.openAll.title" = "Change Payment Method";
"adyen.dropIn.paymentMethodList.description.completePayment" = "Select your preferred payment option and complete the payment";
"adyen.dropIn.paymentMethodList.description.saveDetails" = "Select your preferred payment option and save your details for future transactions";
"adyen.dropIn.storedPaymentMethod.description" = "Use %@ to pay";
"adyen.dropIn.storedPaymentMethod.description.withAmount" = "Use %@ to pay %@";
"adyen.dropIn.storedPaymentMethod.description.saveDetails" = "Use %@ to save details";
"adyen.continueTo" = "Continue to %@";
...
