...

    internal var body: some View {
        ZStack {
            NavigationView {
                List {
                    Toggle("Using Session", isOn: $viewModel.isUsingSession)
                        .accessibilityIdentifier("sessionSwitch")
                        .listRowBackground(Color.clear)
                        .listRowInsets(.init(top: 0, leading: 0, bottom: 0, trailing: 5))
                    
                    ForEach(viewModel.items, id: \.self) { section in
                        Section {
                            ForEach(section, id: \.self) {
...
