...
                                                        <constraint firstAttribute="width" constant="29" id="LDn-Ye-iwP"/>
                                                        <constraint firstAttribute="height" constant="19" id="tRt-Y8-KPm"/>
                                                    </constraints>
                                                </imageView>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="1234 5678 9012 3456" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Z4-ok-sdb" customClass="CardNumberField" customModule="Adyen">
                                                    <rect key="frame" x="59" y="40" width="256" height="22"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="number-field"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="22" id="Qp7-je-XGP"/>
                                                    </constraints>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
...
                                                                    <userDefinedRuntimeAttributes>
                                                                        <userDefinedRuntimeAttribute type="string" keyPath="localizedTextKey" value="creditCard.cvcField.title"/>
                                                                    </userDefinedRuntimeAttributes>
                                                                </label>
                                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="123" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GOT-nC-YyR" customClass="CardCvcField" customModule="Adyen">
                                                                    <rect key="frame" x="0.0" y="20" width="137.5" height="22"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="cvc-field"/>
                                                                    <nil key="textColor"/>
                                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                                    <userDefinedRuntimeAttributes>
                                                                        <userDefinedRuntimeAttribute type="string" keyPath="localizedPlaceholderKey" value="creditCard.cvcField.placeholder"/>
                                                                        <userDefinedRuntimeAttribute type="string" keyPath="localizedAccessibilityLabelKey" value="creditCard.cvcField.title"/>
...
