...
"creditCard.expiryDateField.title"                     = "Expiry Date";
"creditCard.expiryDateField.placeholder"               = "MM/YY";
"creditCard.cvcField.title"                            = "CVC / CVV";
"creditCard.cvcField.placeholder"                      = "123";
"creditCard.storeDetailsButton"                        = "Remember this card for my next payment";
"creditCard.installmentsField"                         = "Number of installments";
"creditCard.oneClickVerification.title"                = "Verify your card";
"creditCard.oneClickVerification.message"              = "Please enter the CVC code for %@";
"creditCard.oneClickVerification.invalidInput.title"   = "Invalid CVC";
"creditCard.oneClickVerification.invalidInput.message" = "Please enter a valid CVC to continue.";
"sepaDirectDebit.ibanField.title"                      = "Account Number (IBAN)";
"sepaDirectDebit.ibanField.placeholder"                = "NL53 ABNA 1925 1294 122";
"sepaDirectDebit.nameField.title"                      = "Holder Name";
...
